--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -1,23 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<nav>
+    <div>
+        <h2>Hotel</h2>
+    </div>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Room</a></li>
+        <li><a href="">Kroos</a></li>
+        <li><a href="">Vini</a></li>
+    </ul>
+    <div>
+        <button class="button-81" type="submit" (click)="onDialogLogin()">Sign in</button>
+    </div>
+</nav>
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid" style="align-content: space-between;">
         <a class="navbar-brand" href="#">Navbar</a>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <div >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
             </ul>
-            <button class="btn btn-outline-success" (click)="onDialogLogin()">Login</button>
         </div>
+        <button class="btn btn-outline-success" (click)="onDialogLogin()">Login</button>
     </div>
-</nav>
+</nav> -->
