--- a/frontend/src/app/dialog-signin-and-signup/signin/signin.component.html
+++ b/frontend/src/app/dialog-signin-and-signup/signin/signin.component.html
@@ -14,7 +14,7 @@
             </div>
             <input type="submit" value="SIGN IN">
             <div class="signup_link">
-                Not a member? <a>Signup</a>
+                Not a member? <a (click)="onRegister()">Signup</a>
             </div>
         </form>
     </div>
