--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -9,23 +9,6 @@
         <li><a href="">Vini</a></li>
     </ul>
     <div>
-        <button class="button-81" type="submit" (click)="onDialogLogin()">Sign in</button>
+        <button class="button-81" type="submit" (click)="onDialogLogin()">Login</button>
     </div>
 </nav>
-
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid" style="align-content: space-between;">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <div >
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-        </div>
-        <button class="btn btn-outline-success" (click)="onDialogLogin()">Login</button>
-    </div>
-</nav> -->
