[frontend] add home, login

--- a/frontend/src/app/dialog-signin-and-signup/dialog-signin-and-signup.component.html
+++ b/frontend/src/app/dialog-signin-and-signup/dialog-signin-and-signup.component.html
@@ -1,7 +1,4 @@
-<!-- <div> -->
-    <app-signin [status]="status"  *ngIf="status"></app-signin>
-    <app-signup [status]="status"  *ngIf="!status"></app-signup>
-<!-- </div> -->
-<!-- <p *ngIf="!status">don't have an account yet ? <a (click)="onLogin()">Sign in</a></p>
-<p *ngIf="status">Not a member ? <a (click)="onRegister()">Sign up</a></p> -->
+<app-signin  *ngIf="status" (newItemEvent)="addItem($event)"></app-signin>
+<app-signup  *ngIf="!status" (newItemEvent)="addItem($event)"></app-signup>
+
 
