--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -3,10 +3,10 @@
         <h2>Hotel</h2>
     </div>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Room</a></li>
-        <li><a href="">Kroos</a></li>
-        <li><a href="">Vini</a></li>
+        <li><a href="">HOME</a></li>
+        <li><a href="">ROOMS</a></li>
+        <li><a href="">PROMOTION</a></li>
+        <li><a href="">ABOUT US</a></li>
     </ul>
     <div>
         <button class="button-81" type="submit" (click)="onDialogLogin()">Login</button>
