--- a/frontend/src/app/dialog-signin-and-signup/signin/signin.component.scss
+++ b/frontend/src/app/dialog-signin-and-signup/signin/signin.component.scss
@@ -7,22 +7,42 @@ body {
     overflow: hidden;
 }
 
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
+.left {
+    position: relative;
+    top: 10%;
+    width: 50%;
+    float: left;
 }
 
-.center h1 {
+.left h1 {
     text-align: center;
     padding: 0 0 20px 0;
     // border-bottom: 1px solid silver;
     font-weight: 700;
 }
 
-.center form {
+.showImg {
+    display: flex;
+    justify-content: center;
+}
+
+.right {
+    position: relative;
+    top: 20%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    width: 50%;
+    float: right;
+}
+
+.right h1 {
+    text-align: center;
+    padding: 0 0 20px 0;
+    // border-bottom: 1px solid silver;
+    font-weight: 700;
+}
+
+.right form {
     padding: 0 40px;
     box-sizing: border-box;
 }
@@ -110,3 +130,62 @@ input[type="submit"]:hover {
     text-decoration: underline;
 }
 
+.content {
+    max-width: 800px;
+    text-align: left;
+    margin: auto;
+}
+
+.simple-ss {
+    width: 380px;
+    height: 400px;
+    background-color: #eeeeee;
+    // margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-image: url("https://www.tourmyindia.com/blog//wp-content/uploads/2022/10/Best-Five-Star-Luxury-Hotels-in-Delhi.jpg");
+    animation-name: slide;
+    animation-duration: 10s;
+    animation-direction: normal;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slide {
+    0% {
+        background-position: 0 0;
+    }
+
+    16.66% {
+        background-position: 0 0;
+    }
+
+    33.32% {
+        background-position: -800px 0;
+    }
+
+    49.98% {
+        background-position: -800px 0;
+    }
+
+    66.64% {
+        background-position: -1600px 0;
+    }
+
+    83.30% {
+        background-position: -1600px 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.btn {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.btn-purple {
+    background: #BA68C8;
+}
