--- a/frontend/src/app/dialog-signin-and-signup/signup/signup.component.scss
+++ b/frontend/src/app/dialog-signin-and-signup/signup/signup.component.scss
@@ -7,22 +7,56 @@ body {
     overflow: hidden;
 }
 
-.center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
+.left {
+    position: relative;
+    top: 4%;
+    width: 50%;
+    float: left;
+    background-color: white;
 }
 
-.center h1 {
+.left h1 {
     text-align: center;
     padding: 0 0 20px 0;
     // border-bottom: 1px solid silver;
     font-weight: 700;
 }
 
-.center form {
+.showImage {
+    position: relative;
+    align-self: center;
+
+    background-color: white;
+    width: 380px;
+    // border: 5px solid black;
+    border-style: dashed;
+    padding: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.abc {
+    display: flex;
+    justify-content: center;
+}
+
+.right {
+    position: relative;
+    top: 4%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    width: 50%;
+    float: right;
+}
+
+.right h1 {
+    text-align: center;
+    padding: 0 0 20px 0;
+    // border-bottom: 1px solid silver;
+    font-weight: 700;
+}
+
+.right form {
     padding: 0 40px;
     box-sizing: border-box;
 }
@@ -76,22 +110,47 @@ form .txt_field {
     width: 100%;
 }
 
-input[type="submit"] {
+// .btn {
+//     width: 100%;
+//     height: 50px;
+//     border: 1px solid;
+//     background: #2691d9;
+//     border-radius: 25px;
+//     font-size: 18px;
+//     color: #e9f4fb;
+//     font-weight: 700;
+//     cursor: pointer;
+//     outline: none;
+// }
+
+// .btn:hover {
+//     border-color: #2691d9;
+//     transform: .5s;
+// }
+
+.btn {
     width: 100%;
-    height: 50px;
-    border: 1px solid;
-    background: #2691d9;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
+    margin-top: 0px;
 }
 
-input[type="submit"]:hover {
-    border-color: #2691d9;
-    transform: .5s;
+.btn-purple {
+    background: #BA68C8;
+}
+
+.signup_link {
+    margin: 10px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+}
+
+.signup_link a {
+    color: #2691d9;
+    cursor: pointer;
+}
+
+.signup_link a:hover {
+    text-decoration: underline;
 }
 
 
